--- a/plantilla.latex
+++ b/plantilla.latex
@@ -1,14 +1,34 @@
-\documentclass[11pt,a5paper]{book}
+\documentclass[12pt,a5paper]{book}
 \usepackage[spanish]{babel}
 \usepackage{fontspec}
 \usepackage{geometry}
 \usepackage{hyperref}
 \usepackage{graphicx}
-\geometry{paperwidth=11cm, paperheight=27cm, left=1.5cm, right=1.5cm, top=2cm, bottom=2cm}
+\usepackage{adjustbox}
+\usepackage{sectsty}
+\geometry{paperwidth=5.5in, paperheight=8.5in, left=1.5cm, right=1.5cm, top=2cm, bottom=2cm}
 \setmainfont{Noto Serif}
 \newfontfamily\japanese{Noto Serif CJK JP}
+\linespread{1.2}
+\setlength{\parindent}{0pt}
+\AtBeginDocument{\fontsize{13pt}{16pt}\selectfont}
+\newcommand{\fullpagetext}[1]{%
+  \clearpage
+  \thispagestyle{plain}
+  \null\vfill
+  \begin{center}
+    \adjustbox{valign=c,max totalsize={\textwidth}{0.9\textheight}}{%
+      \parbox{\textwidth}{#1}%
+    }
+  \end{center}
+  \vfill\null
+  \clearpage
+}
 \setcounter{secnumdepth}{-1} % disable numbering for all heading levels
+\sectionfont{\centering}
+\subsectionfont{\centering}
 \providecommand{\tightlist}{}
 \begin{document}
+\pagestyle{plain}
 $body$
 \end{document}
